FIX : modals are now better on Iphone devices [#1]

--- a/assets/css/components/carousel.css
+++ b/assets/css/components/carousel.css
@@ -52,7 +52,7 @@
   justify-content: center;
   background: none;
   border-radius: 12px;
-  overflow: visible;
+  overflow: hidden;
 }
 .carousel-img {
   position: absolute;
